auth/network-policy/test_data_policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: test-data-networkpolicy
  namespace: test-istio-universal
spec:
  podSelector:
    matchLabels:
      app: test-data
  ingress:
  - from:
     - podSelector:
        matchLabels:
          role: test
    ports:
    - protocol: TCP
      port: 8080
